objects/Tax_Detail__c/Tax_Detail__c.object-meta.xml
<CustomObject>
    <label>Tax Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>