objects/Tax_Detail__c/fields/Tax_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Tax_Jurisdiction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Jurisdiction</label>
    <referenceTo>Tax_Jurisdiction__c</referenceTo>
    <relationshipLabel>Tax Details</relationshipLabel>
    <relationshipName>Tax_Details</relationshipName>
    <type>Lookup</type>
</CustomField>