objects/Tax_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tax_Jurisdiction__c</columns>
    <columns>Tax_Area__c</columns>
    <columns>Tax_Group__c</columns>
    <columns>Tax_Pct__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>